# twitter-excuse

./: .flake8  .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  dev-requirements.in  dev-requirements.txt  hackerutils.py  main.py  pyproject.toml  pytest.ini  renovate.json  requirements.in  requirements.txt  run.sh  setup.py  tests.py  tox.ini  twit-excuse.py  utils.py
.github/: funding.yml
.github/workflows/: ci.yml  release.yml
dotenv/: __init__.py
excuses/: data.py  tests.py
src/: helpers.py  main.py  pytest.ini  test_excuse.py  utils.py
src/excuses/: __init__.py  data.py
src/tests/: __init__.py  test_excuse.py
src/twtrexcs/: __main__.py  helpers.py
src/twtrexcs/excuses/: __init__.py
twtrexcs/: __init__.py  __main__.py  exceptions.py  helpers.py  log_formatter.py
twtrexcs/excuses/: __init__.py  data.py
twtrexcs/tests/: test_excuse.py
